--- a/system/.env
+++ b/system/.env
@@ -1,14 +1,26 @@
 #!/usr/bin/env bash
 
-# Make vim the default editor.
+# Make vscode the default editor.
 export EDITOR = '/Applications/Visual Studio Code.app/Contents/MacOS/Electron' -w
 
-# Enable persistent REPL history for `node`.
-export NODE_REPL_HISTORY=~/.node_history;
-# Allow 32³ entries; the default is 1000.
-export NODE_REPL_HISTORY_SIZE='32768';
-# Use sloppy mode by default, matching web browsers.
-export NODE_REPL_MODE='sloppy';
+# export EDITOR="code"
+export DOTFILES_IDE="code"
+export DOTFILES_GIT_GUI="stree"
+
+# Some app locations
+# export CHROME_BIN="/Applications/Google Chrome.app/Contents/MacOS/Google Chrome"
+# export CHROME_CANARY_BIN="/Applications/Google Chrome Canary.app/Contents/MacOS/Google Chrome Canary"
+
+
+# Raise limit for open files and processes
+ulimit -S -n 8192
+
+# # Enable persistent REPL history for `node`.
+# export NODE_REPL_HISTORY=~/.node_history;
+# # Allow 32³ entries; the default is 1000.
+# export NODE_REPL_HISTORY_SIZE='32768';
+# # Use sloppy mode by default, matching web browsers.
+# export NODE_REPL_MODE='sloppy';
 
 # Make Python use UTF-8 encoding for output to stdin, stdout, and stderr.
 export PYTHONIOENCODING='UTF-8';
@@ -24,11 +36,15 @@ export LANG='en_GB.UTF-8';
 export LC_ALL='en_GB.UTF-8';
 
 # Highlight section titles in manual pages.
-export LESS_TERMCAP_md="${yellow}";
-
-# Don’t clear the screen after quitting a manual page.
-export MANPAGER='less -X';
+# Probably some dependency to some file due to "yellow"
+# export LESS_TERMCAP_md="${yellow}";
 
 # Avoid issues with `gpg` as installed via Homebrew.
 # https://stackoverflow.com/a/42265848/96656
-export GPG_TTY=$(tty);
+# export GPG_TTY=$(tty);
+
+# Autocorrect typos in path names when using `cd`
+shopt -s cdspell
+
+# Do not autocomplete when accidentally pressing Tab on an empty line.
+shopt -s no_empty_cmd_completion
